Separated Skeleton graphics
Put Skeleton graphics into new OpenGL activity. Upgraded Skeleton graphics to OpenGLES2.0. Added auto-fitting functionality for the app. Ended up fixing the unresponsive UI bug in the process.

--- a/BluetoothRobot/app/src/main/AndroidManifest.xml
+++ b/BluetoothRobot/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".OpenGLES20Activity"
             android:parentActivityName=".MainActivity"
             android:exported="true" />
+        <activity
+            android:name=".SkeletonGLES20Activity"
+            android:parentActivityName=".MainActivity"
+            android:exported="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
